fix main content responsive wrap in small cases

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -78,7 +78,7 @@ main {
     grid-column: 2/3;
     display: block;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 3rem 1rem 1rem;
     padding-bottom: 17rem;
     text-align: left;
 }
